--- a/About.html
+++ b/About.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us | STACKLY</title>
-    <link rel="stylesheet" href="about.css" />
+    <link rel="stylesheet" href="About.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;900&display=swap"
       rel="stylesheet"
@@ -144,3 +144,4 @@
     </script>
   </body>
 </html>
+
